/*
 * File: modulation.proto
 * Project: proto
 * Created Date: 29/06/2023
 * Author: Shun Suzuki
 * -----
 * Last Modified: 29/06/2023
 * Modified By: Shun Suzuki (suzuki@hapis.k.u-tokyo.ac.jp)
 * -----
 * Copyright (c) 2023 Shun Suzuki. All rights reserved.
 *
 */

syntax = "proto3";

package autd3;

message Clear {}
message Stop {}
message Synchronize {}
message UpdateFlags {}

message SpecialData {
  oneof special {
    Clear clear = 1;
    Stop stop = 2;
    Synchronize synchronize = 3;
    UpdateFlags update_flags = 4;
  }
}
